[project]
name = "config-store"
version = "0.1.0"
description = "Configuration store with SQLite and MongoDB support"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "click==8.1.8",
    "exceptiongroup==1.3.1",
    "fastapi==0.128.8",
    "h11==0.16.0",
    "idna==3.13",
    "pydantic==2.13.4",
    "pydantic_core==2.46.4",
    "starlette==0.49.3",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "uvicorn==0.39.0",
    "motor",
    "tortoise-orm",
    "aiomysql",
    "pydantic-settings",
    "python-dotenv",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
